[gd_scene format=3 uid="uid://pause_menu_001"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
process_mode = 3
script = ExtResource("1_pause")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1

[node name="MasterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="VBoxContainer/MasterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volume Principal"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/MasterContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = -40.0
max_value = 6.0
value = 0.0

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Musique"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = -40.0
max_value = 6.0
value = 0.0

[node name="SFXContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bruitages"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFXContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = -40.0
max_value = 6.0
value = 0.0

[node name="MuteContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MuteLabel" type="Label" parent="VBoxContainer/MuteContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Muet"

[node name="MuteCheckBox" type="CheckBox" parent="VBoxContainer/MuteContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reprendre"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu Principal"
